--- a/resources/lang/zh-TW.json
+++ b/resources/lang/zh-TW.json
@@ -15,14 +15,14 @@
     "Pan Chen": "陳攀",
     "<a href=\"/\" class=\"active\" aria-label=\"Home\" onclick=\"header.adjust()\" target=\"_self\" rel=\"noopener\">Home</a>": "<a href=\"/\" class=\"active\" aria-label=\"Home\" onclick=\"header.adjust()\" target=\"_self\" rel=\"noopener\">主頁</a>", 
     "<a href = \"/blog\" aria-label=\"Chinese Version\" onclick=\"header.adjust()\" rel=\"noopener\">Blog</a>": "<a href = \"/blog\" aria-label=\"Chinese Version\" onclick=\"header.adjust()\" rel=\"noopener\">部落格</a>",
-    "Story": "我的故事",
-    "Footprints": "我的足跡",
+    "Story": "故事",
+    "Footprints": "足跡",
     "Resume": "簡歷",
     "Hi, there!<br>I am Pan Chen.<br>I am studying Computer Science and Statistics Science at the University of Toronto.<br>My research focus is Artificial Intelligence.<br>I am a friendly, helpful and hard-working person.<br>It's my pleasure that you could find me in the corner of the Internet.<br>- Pan Chen": "你好!<br>我是陳攀。<br>我是多倫多大學計算機科學與統計科學的學生。<br>我的研究方向是人工智慧。<br>我是一個友善、樂於助人、勤奮的人。<br>能夠在互聯網的角落裡遇見你，真好！<br>- 陳攀",
 
     "My Story": "我的故事",
         "I was born and raised in Fuzhou, a coastal city in southeastern China. I spent my first eighteen years there. Many memories were formed there as I became an adult from a little boy.": "我在中國東南部的福州出生長大。在那裡我有許多美好的回憶。",
-        "I was a lousy student until Grade 8 when I transformed myself into a good student. I don't know why I decided to make such change and locked my PSP and PS Vita in the safe at that time. But thanks to that year's hard-working, I was able to continue my studies at the best high school in the province - Fuzhou No.1 Middle School, and this is what I feel proudest of even today. Ever since then, I believe that <i>the harder you work, the luckier you are.</i>": "在我八年級之前我一直都是一個「壞學生”」。直到初二的時候，我也不知道是為了什麼，我突然決定想成為一名「好學生”」，並且將我的PSP遊戲機鎖了起來。多虧了那一年的努力學習，我得以在全省最好的高中——福州第一中學繼續我的學習。這是我時至今日依然最為自豪的一件事情。",
+        "I was a lousy student until Grade 8 when I transformed myself into a good student. I don't know why I decided to make such change and locked my PSP and PS Vita in the safe at that time. But thanks to that year's hard-working, I was able to continue my studies at the best high school in the province - Fuzhou No.1 Middle School, and this is what I feel proudest of even today. Ever since then, I believe that <i>the harder you work, the luckier you are.</i>": "在我八年級之前我一直都是一個「壞學生」。直到初二的時候，我也不知道是為了什麼，我突然決定想成為一名「好學生」，並且將我的PSP遊戲機鎖了起來。多虧了那一年的努力學習，我得以在全省最好的高中——福州第一中學繼續我的學習。這是我時至今日依然最為自豪的一件事情。",
         "And after I graduated from Fuzhou No.1 Middle School in 2017. I moved to Shenyang to study Computer Science and Technology at the Northeastern University. There, I decided to bring another significant change to my life. I chose to apply to the University of Toronto and got a place with my strong academic performance. And I came to where I am in the fall of 2018.": "2017年我從福州一中畢業了之後，我來到了瀋陽的東北大學學習計算機科學與技術。在那裡，我又一次決定要做出一個重大的改變。我申請了多倫多大學，並且憑藉著優異的成績被錄取了。於是我在2018年的8月份搬到了我現在所在的地方。",
         "I am a responsible person who takes his commitment very seriously. I always do my part with high quality within the promised time. And that’s why my friends can trust me.": "我是一個有責任心的人。我總能夠在承諾的時間裡完成我的任務，這也就是別人能夠信賴我的原因。",
         "Besides, I own a wide range of interests, from music, movies to history, politics and so on. During my spare time, I work on my debut novel – Three Years in FZYZ, a book based on my real high school life.": "除此之外，我有著廣泛的興趣，從音樂、電影到歷史、政治等等。閒暇之時，我會創作我的第一本小說，一本基於我真實高中生活的小說。",
@@ -122,9 +122,9 @@
             "Every user has ten quotes which they could pay to get their customized short url for any url.": "每個用戶有10個配額來為任意的網址生成短鏈接。",
 
         "Your Today": "你的今日",
-            "Your Today is a Web Application that is built with Express for the backend, ReactJS for the frontend, and MongoDB for the databse. Many frameworks / libraries / External API have been used, such as Material-UI, Socket.IO, OpenWeatherMap and so on.": "Your Today是一個後端采用Express，前端采用ReactJS，資料庫采用MongoDB開發的網路應用。許多框架/庫/外部API被使用，比如説Material-UI、Socket.IO、OpenWeatherMap等等。",
+            "Your Today is a Web Application that is built with Express for the backend, ReactJS for the frontend, and MongoDB for the databse. Many frameworks / libraries / External API have been used, such as Material-UI, Socket.IO, OpenWeatherMap and so on.": "「你的今日」是一個後端采用Express，前端采用ReactJS，資料庫采用MongoDB開發的網路應用。許多框架/庫/外部API被使用，比如説Material-UI、Socket.IO、OpenWeatherMap等等。",
             "I developed this webapp in a team of four.": "我與另外三名同學一起開發了這款網路應用。",
-            "The aim of Your Today is to give the user the ability to have a highly-customized homepage for their browser. For instance, they can create a list of most-visited websites so that they can visit these websites more easily.": "Your Today的目的在於讓用戶能夠為瀏覽器創造一個高度客製化的主頁。比方説，他們可以創建最常訪問網頁清單，以便能夠更方便地訪問這些網頁。",
+            "The aim of Your Today is to give the user the ability to have a highly-customized homepage for their browser. For instance, they can create a list of most-visited websites so that they can visit these websites more easily.": "「你的今日」的目的在於讓用戶能夠為瀏覽器創造一個高度客製化的主頁。比方説，他們可以創建最常訪問網頁清單，以便能夠更方便地訪問這些網頁。",
             "The webapp also brings instant messaging features. Knowing a person's username, you can send the person a message. If the person is online, he well get the message immediately.": "這款網路應用也具備「即時通訊」特性。只要知道一個人的用戶名，你就可以給這個人發一則簡訊。如果這個人正在線上，他會立馬收到這則簡訊。",
 
         "Dynamic Resume Management System": "動態簡歷管理系統",
