--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -29,6 +29,8 @@
         "Besides, I own a wide range of interests, from music, movies to history, politics and so on. During my spare time, I work on my debut novel – Three Years in FZYZ, a book based on my real high school life.": "除此之外，我有着广泛的兴趣，从音乐、电影到历史、政治等等。闲暇之时，我会创作我的第一本小说，一本基于我真实高中生活的小说。",
 
     "My Projects": "我的项目",
+    "My Skills": "我的技能",
+        "MORE": "浏览更多",
     "My Footprints": "我的足迹",
         "I love travelling. It makes me realize how diverse our world is and the importance of thinking in a more comprehensive way.": "我喜欢旅行。旅行让我明白了我们的世界是多么的多元化以及多元思考的重要性。",
 
@@ -94,7 +96,7 @@
 
             "Minor: <a href = \"https://www.statistics.utoronto.ca/\">Statistics Science</a>, <a href = \"https://www.eas.utoronto.ca/\">Eastern Asian Studies</a>": "辅修：<a href = \"https://www.statistics.utoronto.ca/\">统计科学</a>, <a href = \"https://www.eas.utoronto.ca/\">东亚学</a>",
 
-            "Computer Science related courses: Introduction to Computer Science, Mathematical Expression and Reasoning for Computer Science, Software Design, Linear Algebra II, Probability with Computer Applications, Introduction to Language, Introduction to the Theory of Computation, Software Tools and Systems Programming, Data Structures and Analysis, The Design of Interactive Computational Media, Introduction to Databases, Introduction to Software Engineering, Programming on the Web, Introduction to Combinatorics": "计算机科学相关课程：计算机科学导论，计算机科学的数学表达与逻辑推理，软件设计，线性代数2，计算机概率应用，语言学导论，计算原理导论，工具软件与系统程序设计，数据结构与分析，交互式计算机媒体设计，数据库导论，软件工程导论，网络应用开发，组合学导论",
+            "Computer Science related courses: Introduction to Computer Science, Mathematical Expression and Reasoning for Computer Science, Software Design, Linear Algebra II, Probability with Computer Applications, Introduction to Language, Introduction to the Theory of Computation, Software Tools and Systems Programming, Data Structures and Analysis, The Design of Interactive Computational Media, Introduction to Databases, Introduction to Software Engineering, Programming on the Web, Introduction to Combinatorics, Algorithm Design, Analysis & Complexity, Operating Systems": "计算机科学相关课程：计算机科学导论，计算机科学的数学表达与逻辑推理，软件设计，线性代数2，计算机概率应用，语言学导论，计算原理导论，工具软件与系统程序设计，数据结构与分析，交互式计算机媒体设计，数据库导论，软件工程导论，网络应用开发，组合学导论，算法设计、分析与复杂度，操作系统",
 
         "Bachelor of Engineering (unfinished) | Northeastern University | September 2017 – July 2018": "工学士（未完成） | 东北大学 | 2017年9月 - 2018年7月",
 
@@ -106,8 +108,16 @@
             "Data Science Professional by IBM": "由IBM提供的数据科学专业课程",
             "Web Applications for Everybody by University of Michigan": "由密歇根大学提供的网络应用开发课程",
 
+    "Experience": "工作经历",
+    "Quality Assurance | Infrastructures for Information | June 2020 - August 2020": "质量检测人员 | Infrastructures for Information | 2020年6月 - 2020年8月",
+    "Software Developer | Infrastructures for Information | August 2020 - August 2021": "软件开发人员 | Infrastructures for Information | 2020年8月 - 2021年8月",
+        "Infrastructures for Information is an independent software company specializing in the delivery of XML / SGML document processing software in Toronto, Ontario, Canada, founded by Michel Vulpe in 1993." : "Infrastructures for Information是一家由Michel Vulpe先生于1993年成立，位于加拿大安大略省多伦多市，专注于XML / SGML传输的独立软件公司。", 
+
+    "Webmaster & Editor | Chen's Notes | Novermber 2016 - Present": "站长兼总编辑 | 小陈笔记 | 2016年11日 - 今",
+        "Chen's Notes is a Chinese website that currently has a server in Republic of Singapore. The main topic is Tech News, Internet, Free Resources, Tutorials, and Reviews on Online Products.": "小陈笔记是一个中文网站，目前的服务器位于新加坡共和国。小陈笔记的主要话题是科技新闻、互联网新知、免费资源、使用教程、以及互联网产品的评测。",
+
     "Skills": "技能",
-        "Languages": "程序语言",
+        "Programming Languages": "程序语言",
         "Frameworks/Libraries": "框架/函式库",
         "Techniques": "技术",
         "Tools": "工具",
@@ -183,5 +193,9 @@
         "The AI module is on the way": "AI模块正在赶来的路上",
         "Start": "开玩",
         "GAMEOVER": "撞墙了",
-        "Try Again!": "再试一次！"
+        "Try Again!": "再试一次！",
+"History - Pan Chen": "本站历史 - 陈攀",
+"<a href = \"/blog\" aria-label=\"Blog\" onclick=\"header.adjust()\" rel=\"noopener\">Blog</a>": "<a href = \"https://www.chen.life\" aria-label=\"博客\" onclick=\"header.adjust()\" rel=\"noopener\">博客</a>",
+"<a data-toggle=\"tooltip\" title=\"Blog\" href=\"/blog\" aria-label=\"My Blog\" target=\"_self\" rel=\"noopener\"><i class=\"iconfont icon-book\"></i></a>": "<a data-toggle=\"tooltip\" title=\"博客\" href=\"https://www.chen.life\" aria-label=\"我的博客\" target=\"_self\" rel=\"noopener\"><i class=\"iconfont icon-book\"></i></a>",
+"Languages": "语言"
 }
