--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -68,7 +68,7 @@
         "%s said on %s": "%s于%s说了",
         "M d, Y": "Y年m月d日",
 
-    "Web Hosting by Hetzner": "Hetzner提供云计算服务",
+    "Web Hosting by DigitalOcean": "DigitalOcean提供云计算服务",
     "CDN by Cloudflare": "Cloudflare提供内容传递网络",
 
 
